--- a/src/css/filter.css
+++ b/src/css/filter.css
@@ -214,12 +214,14 @@
 }
 
 .ratingFilterIcon {
+  line-height: normal;
   display: flex;
   align-items: center;
 }
 
 .starIcon {
   width: 13px;
+  margin-left: 4px;
 }
 
 .labelOrProductCount {
